<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2018 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="?android:attr/alertDialogTheme"
    android:paddingTop="8dp"
    android:paddingLeft="?android:attr/dialogPreferredPadding"
    android:paddingRight="?android:attr/dialogPreferredPadding">

    <LinearLayout
        android:id="@+id/staging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Material.Subhead"
            android:text="@string/message_staging" />

        <ProgressBar
            android:id="@+id/progress_indeterminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/installing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Material.Subhead"
            android:text="@string/installing" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/install_confirm_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_confirm_question"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_confirm_question_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_confirm_question_update"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_confirm_question_update_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_confirm_question_update_system"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_done"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_failed"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_failed_blocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_failed_blocked"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_failed_conflict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_failed_conflict"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_failed_incompatible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_failed_incompatible"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/install_failed_invalid_apk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Material.Subhead"
        android:text="@string/install_failed_invalid_apk"
        android:visibility="invisible" />

</FrameLayout>
